# hbir

./: README.md
docs/: Makefile  README.md  conf.py  future.md  index.rst  lang.md  lotus.md  modd.conf  overview.md  requirements.txt
docs/_static/: style.css
docs/spec/: hbir.md  hbir.tex
fic/: README.md  fic.py  pyproject.toml
lotus/: .gitignore  Makefile  README.md  lang-start.install  lotus.opam
lotus/examples/: basic-test0.hbir  basic-test1.hbir  basic-test2.hbir  f1-vvadd.hbir  hello-world.hbir  vvadd-1core.hbir  vvadd-single-tile.hbir  vvadd.hbir
lotus/examples/f1-benchmarks/: collab-filter.hbir  gemm-accel.hbir  gemm.hbir  vvadd.hbir
lotus/src/: ast.ml  core_emit.ml  dune  error.ml  f1.ml  f1_device.ml  f1_host.ml  group.ml  layouts.ml  lexer.mll  manycore.ml  ops.ml  parser.mly  simplec.ml  typecheck.ml  utils.ml  visualize.ml
lotus/tests/: code-block-decl.hbir  code_syntax.hbir  config-syntax.hbir  data-section-syntax.out  data-syntax.hbir  data-syntax.out  extern_syntax.hbir  four_groups.hbir  no-op.hbir  no-op.out  simple-group.hbir  target-syntax.hbir  target-syntax.out  turnt.toml  vvadd.hbir
tools/vscode/syntaxes/: hbir.tmLanguage.json
turnt/: README.md  turnt.py
vscode/hbir-pro/: CHANGELOG.md  README.md  language-configuration.json  package.json  vsc-extension-quickstart.md
vscode/hbir-pro/syntaxes/: hbir.tmLanguage.json
